--- a/server/public/index.html
+++ b/server/public/index.html
@@ -8,15 +8,16 @@
     <title>Server Side Calculator</title>
     <script src="jquery.js"></script>
     <script src="client.js"></script>
+    <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
     <form>
         <label for="value1">Value 1:</label>
-        <input type="text" id="value1" name="value1">
+        <input type="number" id="value1" name="value1">
         <br>
         <label for="value2">Value 2:</label>
-        <input type="text" id="value2" name="value2">
+        <input type="number" id="value2" name="value2">
         <br>
         <label for="operation">Operation:</label>
         <select id="operation" name="operation">
@@ -29,14 +30,6 @@
         <button id="submit-button">Submit</button>
         <button id="clear">C</button>
     </form>
-    <table>
-        <thead>
-            <tr>
-                <th>Guess History</th>
-            </tr>
-        </thead>
-        <tbody id="tableOf"></tbody>
-    </table>
     <div id="result"></div>
 </body>
 
