--- a/server/public/index.html
+++ b/server/public/index.html
@@ -13,21 +13,16 @@
 
 <body>
     <form>
-        <label for="value1">Value 1:</label>
-        <input type="number" id="value1" name="value1">
-        <br>
-        <label for="value2">Value 2:</label>
-        <input type="number" id="value2" name="value2">
-        <br>
-        <label for="operation">Operation:</label>
+        <input type="text" id="value1" placeholder="value1">
+        <input type="text" id="value2" placeholder="value2">
         <select id="operation" name="operation">
-          <option value="add">Add</option>
-          <option value="subtract">Subtract</option>
-          <option value="multiply">Multiply</option>
-          <option value="divide">Divide</option>
+            <option value="add">Add</option>
+            <option value="subtract">Subtract</option>
+            <option value="multiply">Multiply</option>
+            <option value="divide">Divide</option>
         </select>
         <br>
-        <button id="submit-button">Submit</button>
+        <button type="submit">=</button>
         <button id="clear">C</button>
     </form>
     <div id="result"></div>
